feat: Implement comprehensive DAB best practices for customer demo
🎯 Major enhancements for enterprise-grade Databricks Asset Bundle demonstration:

✅ Environment-Specific Compute Configuration:
- Dev: All-purpose clusters for interactive development
- Prod: Serverless compute for cost-optimized production workloads

✅ Advanced Resource Management:
- Updated naming conventions to use underscores (customer_complaints_*)
- Environment-specific prefixes with username compliance for dev mode
- Comprehensive resource tagging across all environments

✅ Multi-Environment Configuration:
- Dev target: Interactive development with persistent clusters
- Prod target: Service principal auth with auto-terminating compute
- Environment-specific catalogs, schemas, and volume paths

✅ Production-Ready Features:
- Daily job scheduling with email notifications
- Service principal authentication for prod deployments
- Comprehensive error handling and timeout configurations
- Unity Catalog integration with proper permissions

📁 Files Modified:
- databricks.yml: Enhanced with environment variables and compute settings
- resources/pipelines.yml: Updated naming and cluster configurations
- resources/customer_complaints_job.yml: Added tagging and naming consistency
- DAB_BEST_PRACTICES_SUMMARY.md: Comprehensive documentation for demos

🚀 Ready for customer demonstrations showcasing:
- Infrastructure as Code patterns
- Environment parity and promotion
- Cost optimization strategies
- Security best practices with service principals
- Comprehensive observability and monitoring

Validated successfully on both dev and prod targets.

--- a/databricks.yml
+++ b/databricks.yml
@@ -12,28 +12,56 @@ include:
 targets:
   dev:
     # The default target uses 'mode: development' to create a development copy.
-    # - Deployed resources get prefixed with '[dev my_user_name]'
+    # - Deployed resources get prefixed with '[dev]' (custom prefix)
     # - Any job schedules and triggers are paused by default (Develop Mode)
     # See also https://docs.databricks.com/dev-tools/bundles/deployment-modes.html.
     mode: development
     default: true
     workspace:
       host: https://adb-984752964297111.11.azuredatabricks.net
+    
+    # Custom prefix for dev resources (includes username for uniqueness in development mode)
+    presets:
+      name_prefix: "[dev ${workspace.current_user.short_name}]"
+    
     variables:
       catalog: dz_demos_dev
       schema: ${workspace.current_user.short_name}
       volume_path: /Volumes/dz_demos_dev/lakeflow_dec_pipe_r_scripts/demo_source_data
+      # Dev uses all-purpose cluster (not serverless)
+      pipeline_serverless: false
+      # Dev environment tags
+      environment_tags:
+        Environment: "development"
+        Project: "lakeflow_complaints_demo"
+        Owner: "daniel.zoccali@databricks.com"
+        CostCenter: "engineering"
       
   prod:
     mode: production
     workspace:
       host: https://adb-984752964297111.11.azuredatabricks.net #  For this demo, it is the same workspace
-      # We explicitly deploy to /Workspace/Users/user@company.com to make sure we only have a single copy.
+      # We explicitly deploy to /Workspace/Users/user@company.com to make sure we only have a single copy
       root_path: /Workspace/Users/daniel.zoccali@databricks.com/.bundle/${bundle.name}/${bundle.target}
+    
+    # Run production pipeline as service principal
+    run_as:
+      service_principal_name: dz_demos_service_principal
+    
     variables:
       catalog: dz_demos
       schema: lakeflow_dec_pipe_r_scripts
       volume_path: /Volumes/dz_demos/lakeflow_dec_pipe_r_scripts/demo_source_data
+      # Prod uses job clusters (serverless compute)
+      pipeline_serverless: true
+      # Production environment tags
+      environment_tags:
+        Environment: "production"
+        Project: "lakeflow_complaints_demo"
+        Owner: "daniel.zoccali@databricks.com"
+        CostCenter: "business"
+        Criticality: "high"
+    
     permissions:
       - user_name: daniel.zoccali@databricks.com
         level: CAN_MANAGE
@@ -51,4 +79,17 @@ variables:
   volume_path:
     description: Path to source data volume
     default: /Volumes/dz_demos/lakeflow_dec_pipe_r_scripts/demo_source_data
+  
+  # Environment-specific compute configuration
+  pipeline_serverless:
+    description: Whether to use serverless compute for pipeline
+    default: false
+  
+  # Environment tags for resource tracking
+  environment_tags:
+    description: Tags to apply to all resources
+    default:
+      Environment: "unknown"
+      Project: "lakeflow_complaints_demo"
+      Owner: "daniel.zoccali@databricks.com"
 
