--- a/resources/pipelines.yml
+++ b/resources/pipelines.yml
@@ -9,13 +9,13 @@ resources:
       
       # All-purpose cluster configuration for development (when serverless: false)
       clusters:
-        - label: "main"
-          node_type_id: "i3.xlarge"  # Medium-sized instances for development work
-          driver_node_type_id: "i3.xlarge"
+        - node_type_id: "Standard_D8s_v3"  # Medium-sized instances for development work
+          driver_node_type_id: "Standard_D8s_v3"
           num_workers: 2
           spark_conf:
-            "spark.databricks.cluster.profile": "serverless"
             "spark.databricks.delta.preview.enabled": "true"
+            "spark.sql.adaptive.enabled": "true"
+            "spark.sql.adaptive.coalescePartitions.enabled": "true"
           custom_tags: ${var.environment_tags}
       
       # Explicitly include each transformation file
