fix: Resolve production deployment issues and cluster configuration conflicts
🔧 Fixed critical production deployment issues:

✅ Service Principal Configuration:
- Created service principal: 45d38527-d29d-4e63-8cbb-0608e7472025 (dz_demos_service_principal)
- Added service principal to bundle permissions with CAN_MANAGE access
- Configured run_as for production deployments

✅ Cluster Configuration Resolution:
- Removed hardcoded cluster settings from shared pipeline configuration
- Added dev-specific cluster overrides in databricks.yml using resources section
- Ensured serverless production deployments have no cluster conflicts

✅ Environment-Specific Compute Strategy:
- Dev: All-purpose clusters (Standard_D8s_v3, 2 workers) for interactive development
- Prod: Serverless compute for cost-optimized production workloads
- Conditional cluster configuration prevents serverless/cluster conflicts

✅ Workspace Access & Permissions:
- Configured service principal workspace access for production
- Added proper bundle-level permissions for both user and service principal
- Resolved 403 workspace-access entitlement issues

✅ File Path & Access Resolution:
- Maintained workspace file access patterns for both environments
- Service principal has proper access to transformation SQL files
- Bundle deploys successfully to both dev and prod targets

🚀 Deployment Status:
- Dev deployment: ✅ Successful with all-purpose clusters
- Prod deployment: ✅ Successful with serverless compute
- Both environments validated and deployed without errors

📋 Files Modified:
- databricks.yml: Added dev cluster overrides and service principal permissions
- resources/pipelines.yml: Removed hardcoded clusters to prevent conflicts

Ready for production workloads with proper service principal authentication and environment-specific compute configurations
git push
'

--- a/databricks.yml
+++ b/databricks.yml
@@ -19,10 +19,12 @@ targets:
     default: true
     workspace:
       host: https://adb-984752964297111.11.azuredatabricks.net
+      # We explicitly deploy to /Workspace/Users/user@company.com to make sure we only have a single copy
+      root_path: /Workspace/Users/daniel.zoccali@databricks.com/.bundle/${bundle.name}/${bundle.target}
     
     # Custom prefix for dev resources (includes username for uniqueness in development mode)
     presets:
-      name_prefix: "[dev ${workspace.current_user.short_name}]"
+      name_prefix: "[dev_${workspace.current_user.short_name}]"
     
     variables:
       catalog: dz_demos_dev
@@ -36,17 +38,32 @@ targets:
         Project: "lakeflow_complaints_demo"
         Owner: "daniel.zoccali@databricks.com"
         CostCenter: "engineering"
+    
+    # Dev-specific resource overrides
+    resources:
+      pipelines:
+        customer_complaints_pipeline:
+          # Add cluster configuration for dev environment (all-purpose clusters)
+          clusters:
+            - node_type_id: "Standard_D8s_v3"
+              driver_node_type_id: "Standard_D8s_v3"
+              num_workers: 2
+              spark_conf:
+                "spark.databricks.delta.preview.enabled": "true"
+                "spark.sql.adaptive.enabled": "true"
+                "spark.sql.adaptive.coalescePartitions.enabled": "true"
+              custom_tags: ${var.environment_tags}
       
   prod:
     mode: production
     workspace:
       host: https://adb-984752964297111.11.azuredatabricks.net #  For this demo, it is the same workspace
       # We explicitly deploy to /Workspace/Users/user@company.com to make sure we only have a single copy
-      root_path: /Workspace/Users/daniel.zoccali@databricks.com/.bundle/${bundle.name}/${bundle.target}
+      root_path: /Workspace/Prod/.bundle/${bundle.name}/${bundle.target}
     
     # Run production pipeline as service principal
     run_as:
-      service_principal_name: dz_demos_service_principal
+      service_principal_name: 45d38527-d29d-4e63-8cbb-0608e7472025
     
     variables:
       catalog: dz_demos
@@ -64,6 +81,8 @@ targets:
     
     permissions:
       - user_name: daniel.zoccali@databricks.com
+        level: CAN_MANAGE
+      - service_principal_name: 45d38527-d29d-4e63-8cbb-0608e7472025
         level: CAN_MANAGE
 
 # Variables that can be referenced throughout the bundle
