fix: Remove gitignored files from remote repo and update CLI version
🔧 Repository Cleanup & CI/CD Fixes:

✅ Removed tracked files now in .gitignore:
- GITHUB_ACTIONS_SETUP.md (kept locally, removed from remote)
- README_CICD.md (kept locally, removed from remote)
- validate-cicd.sh (kept locally, removed from remote)

✅ Fixed GitHub Actions CLI Version Issue:
- Updated all jobs to use databricks/setup-cli@v0.214.0
- Ensures bundle command support (Databricks CLI v2)
- Resolves 'No such command bundle' error in CI/CD pipeline

🎯 Files remain locally but won't be tracked in git going forward.
CI/CD pipeline now uses correct CLI version with bundle support.

--- a/.github/workflows/databricks-deploy.yml
+++ b/.github/workflows/databricks-deploy.yml
@@ -18,10 +18,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Databricks CLI
-        uses: databricks/setup-cli@main
-        with:
-          databricks-cli-version: latest
+      - name: Setup Databricks CLI v2 (Bundle Support)
+        uses: databricks/setup-cli@v0.214.0
 
       - name: Validate dev bundle
         env:
@@ -47,10 +45,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Databricks CLI
-        uses: databricks/setup-cli@main
-        with:
-          databricks-cli-version: latest
+      - name: Setup Databricks CLI v2 (Bundle Support)
+        uses: databricks/setup-cli@v0.214.0
 
       - name: Deploy to dev
         env:
@@ -77,10 +73,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Databricks CLI
-        uses: databricks/setup-cli@main
-        with:
-          databricks-cli-version: latest
+      - name: Setup Databricks CLI v2 (Bundle Support)
+        uses: databricks/setup-cli@v0.214.0
 
       - name: Deploy to prod
         env:
@@ -106,10 +100,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Databricks CLI
-        uses: databricks/setup-cli@main
-        with:
-          databricks-cli-version: latest
+      - name: Setup Databricks CLI v2 (Bundle Support)
+        uses: databricks/setup-cli@v0.214.0
 
       - name: Run pipeline tests
         env:
